添加新的模块

--- a/pattern/pom.xml
+++ b/pattern/pom.xml
@@ -4,4 +4,10 @@
   <artifactId>pattern</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
+  <modules>
+  	<module>creator</module>
+  	<module>behavitor</module>
+  	<module>pools</module>
+  	<module>stucture</module>
+  </modules>
 </project>
