--- a/pattern/pom.xml
+++ b/pattern/pom.xml
@@ -7,4 +7,11 @@
   <modules>
   	<module>creator</module>
   </modules>
+  <dependencies>
+  <dependency>
+  	<groupId>junit</groupId>
+  	<artifactId>junit</artifactId>
+  	<version>4.11</version>
+  </dependency>
+  </dependencies>
 </project>
